--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="mozaika">
+    <div id="mozaika">       
         <div class="square" id="s1"></div>
         <div class="square" id="s2"></div>
         <div class="square" id="s3"></div>
@@ -19,6 +19,147 @@
         <div class="square" id="s8"></div>
         <div class="square" id="s9"></div>
         <div class="square" id="s10"></div>
+        <div class="square" id="s11"></div>
+        <div class="square" id="s12"></div>
+        <div class="square" id="s13"></div>
+        <div class="square" id="s14"></div>
+        <div class="square" id="s15"></div>
+        <div class="square" id="s16"></div>
+        <div class="square" id="s17"></div>
+        <div class="square" id="s18"></div>
+        <div class="square" id="s19"></div>
+        <div class="square" id="s20"></div>
+        <div class="square" id="s21"></div>
+        <div class="square" id="s22"></div>
+        <div class="square" id="s23"></div>
+        <div class="square" id="s24"></div>
+        <div class="square" id="s25"></div>
+        <div class="square" id="s26"></div>
+        <div class="square" id="s27"></div>
+        <div class="square" id="s28"></div>
+        <div class="square" id="s29"></div>
+        <div class="square" id="s30"></div>
+        <div class="square" id="s31"></div>
+        <div class="square" id="s32"></div>
+        <div class="square" id="s33"></div>
+        <div class="square" id="s34"></div>
+        <div class="square" id="s35"></div>
+        <div class="square" id="s36"></div>
+        <div class="square" id="s37"></div>
+        <div class="square" id="s38"></div>
+        <div class="square" id="s39"></div>
+        <div class="square" id="s40"></div>
+        <div class="square" id="s41"></div>
+        <div class="square" id="s42"></div>
+        <div class="square" id="s43"></div>
+        <div class="square" id="s44"></div>
+        <div class="square" id="s45"></div>
+        <div class="square" id="s46"></div>
+        <div class="square" id="s47"></div>
+        <div class="square" id="s48"></div>
+        <div class="square" id="s49"></div>
+        <div class="square" id="s50"></div>
+        <div class="square" id="s51"></div>
+        <div class="square" id="s52"></div>
+        <div class="square" id="s53"></div>
+        <div class="square" id="s54"></div>
+        <div class="square" id="s55"></div>
+        <div class="square" id="s56"></div>
+        <div class="square" id="s57"></div>
+        <div class="square" id="s58"></div>
+        <div class="square" id="s59"></div>
+        <div class="square" id="s60"></div>
+        <div class="square" id="s61"></div>
+        <div class="square" id="s62"></div>
+        <div class="square" id="s63"></div>
+        <div class="square" id="s64"></div>
+        <div class="square" id="s65"></div>
+        <div class="square" id="s66"></div>
+        <div class="square" id="s67"></div>
+        <div class="square" id="s68"></div>
+        <div class="square" id="s69"></div>
+        <div class="square" id="s70"></div>
+        <div class="square" id="s71"></div>
+        <div class="square" id="s72"></div>
+        <div class="square" id="s73"></div>
+        <div class="square" id="s74"></div>
+        <div class="square" id="s75"></div>
+        <div class="square" id="s76"></div>
+        <div class="square" id="s77"></div>
+        <div class="square" id="s78"></div>
+        <div class="square" id="s79"></div>
+        <div class="square" id="s80"></div>
+        <div class="square" id="s81"></div>
+        <div class="square" id="s82"></div>
+        <div class="square" id="s83"></div>
+        <div class="square" id="s84"></div>
+        <div class="square" id="s85"></div>
+        <div class="square" id="s86"></div>
+        <div class="square" id="s87"></div>
+        <div class="square" id="s88"></div>
+        <div class="square" id="s89"></div>
+        <div class="square" id="s90"></div>
+        <div class="square" id="s91"></div>
+        <div class="square" id="s92"></div>
+        <div class="square" id="s93"></div>
+        <div class="square" id="s94"></div>
+        <div class="square" id="s95"></div>
+        <div class="square" id="s96"></div>
+        <div class="square" id="s97"></div>
+        <div class="square" id="s98"></div>
+        <div class="square" id="s99"></div>
+        <div class="square" id="s100"></div>
+        <div class="square" id="s101"></div>
+        <div class="square" id="s102"></div>
+        <div class="square" id="s103"></div>
+        <div class="square" id="s104"></div>
+        <div class="square" id="s105"></div>
+        <div class="square" id="s106"></div>
+        <div class="square" id="s107"></div>
+        <div class="square" id="s108"></div>
+        <div class="square" id="s109"></div>
+        <div class="square" id="s110"></div>
+        <div class="square" id="s111"></div>
+        <div class="square" id="s112"></div>
+        <div class="square" id="s113"></div>
+        <div class="square" id="s114"></div>
+        <div class="square" id="s115"></div>
+        <div class="square" id="s116"></div>
+        <div class="square" id="s117"></div>
+        <div class="square" id="s118"></div>
+        <div class="square" id="s119"></div>
+        <div class="square" id="s120"></div>
+        <div class="square" id="s121"></div>
+        <div class="square" id="s122"></div>
+        <div class="square" id="s123"></div>
+        <div class="square" id="s124"></div>
+        <div class="square" id="s125"></div>
+        <div class="square" id="s126"></div>
+        <div class="square" id="s127"></div>
+        <div class="square" id="s128"></div>
+        <div class="square" id="s129"></div>
+        <div class="square" id="s130"></div>
+        <div class="square" id="s131"></div>
+        <div class="square" id="s132"></div>
+        <div class="square" id="s133"></div>
+        <div class="square" id="s134"></div>
+        <div class="square" id="s135"></div>
+        <div class="square" id="s136"></div>
+        <div class="square" id="s137"></div>
+        <div class="square" id="s138"></div>
+        <div class="square" id="s139"></div>
+        <div class="square" id="s140"></div>
+        <div class="square" id="s141"></div>
+        <div class="square" id="s142"></div>
+        <div class="square" id="s143"></div>
+        <div class="square" id="s144"></div>
+        <div class="square" id="s145"></div>
+        <div class="square" id="s146"></div>
+        <div class="square" id="s147"></div>
+        <div class="square" id="s148"></div>
+        <div class="square" id="s149"></div>
+        <div class="square" id="s150"></div>
+
 
     </div>
     <div id="stopka">
