--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,9 @@
     <title>Hanna Gallery</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div id="mozaika">       
+    <div id="mozaika">
         <div class="square" id="s1"></div>
         <div class="square" id="s2"></div>
         <div class="square" id="s3"></div>
@@ -159,17 +161,18 @@
         <div class="square" id="s148"></div>
         <div class="square" id="s149"></div>
         <div class="square" id="s150"></div>
-
-
     </div>
     <div id="stopka">
         <div id="autor">
             <p>Hanna Padchynenkava</p>
         </div>
         <div id="kontakt">
-            <p>podchinenkowa@gmail.com</p>
+            <p>
+                <a id="mailto" href="mailto:podchinenkowa@gmail.com">podchinenkowa@gmail.com</a>
+            </p>
             <p>Republic of Belarus-Poland-Czech Republic</p>
         </div>
     </div>
 </body>
+
 </html>
