Added Photos to /Images

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hanna Gallery</title>  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -42,7 +46,7 @@
         <div class="square" id="s26"></div>
         <div class="square" id="s27"></div>
         <div class="square" id="s28"></div>
-        <div class="square" id="s29" data-bs-toggle="modal" data-bs-target="#staticBackdrop"></div>
+        <div class="square" id="s29" data-bs-toggle="modal"  data-bs-target="#staticBackdrop"></div>
         <div class="square" id="s30"></div>
         <div class="square" id="s31"></div>
         <div class="square" id="s32"></div>
@@ -195,7 +199,8 @@
 
 
 
-  
+
+  <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
