Added Photo #1 with description

--- a/index.html
+++ b/index.html
@@ -174,13 +174,21 @@
 
     <!--Galeria-->
     <!-- Modal -->
-    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <button style="background-color: white;" type="button" class="btn-close" data-bs-dismiss="modal"
+            aria-label="Close"></button>
         <div class="modal-dialog modal-fullscreen">
-        <div class="modal-content">
-            <div class="modal-header">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <div class="modal-content">
+                <div class="modal-body">
+                    <img src="/Images/1_selfie.jpeg" alt=""></img>
+                    <div class="description">
+                        <p>„Selfie”</p>
+                        <p>70x100 cm</p>
+                        <p>oil, cardboard</p>
+                    </div>
+                </div>
             </div>
-        </div>
         </div>
     </div>
 
