Added Full Gallery

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
         <div class="square" id="s26"></div>
         <div class="square" id="s27"></div>
         <div class="square" id="s28"></div>
-        <div class="square" id="s29" data-bs-toggle="modal"  data-bs-target="#staticBackdrop"></div>
+        <div class="square" id="s29" data-bs-toggle="modal"  data-bs-target="#modal-1"></div>
         <div class="square" id="s30"></div>
         <div class="square" id="s31"></div>
         <div class="square" id="s32"></div>
-        <div class="square" id="s33"></div>
+        <div class="square" id="s33" data-bs-toggle="modal"  data-bs-target="#modal-2"></div>
         <div class="square" id="s34"></div>
         <div class="square" id="s35"></div>
-        <div class="square" id="s36"></div>
+        <div class="square" id="s36" data-bs-toggle="modal"  data-bs-target="#modal-3"></div>
         <div class="square" id="s37"></div>
         <div class="square" id="s38"></div>
         <div class="square" id="s39"></div>
@@ -64,7 +64,7 @@
         <div class="square" id="s44"></div>
         <div class="square" id="s45"></div>
         <div class="square" id="s46"></div>
-        <div class="square" id="s47"></div>
+        <div class="square" id="s47" data-bs-toggle="modal"  data-bs-target="#modal-4"></div>
         <div class="square" id="s48"></div>
         <div class="square" id="s49"></div>
         <div class="square" id="s50"></div>
@@ -92,7 +92,7 @@
         <div class="square" id="s72"></div>
         <div class="square" id="s73"></div>
         <div class="square" id="s74"></div>
-        <div class="square" id="s75"></div>
+        <div class="square" id="s75" data-bs-toggle="modal"  data-bs-target="#modal-5"></div>
         <div class="square" id="s76"></div>
         <div class="square" id="s77"></div>
         <div class="square" id="s78"></div>
@@ -114,7 +114,7 @@
         <div class="square" id="s94"></div>
         <div class="square" id="s95"></div>
         <div class="square" id="s96"></div>
-        <div class="square" id="s97"></div>
+        <div class="square" id="s97" data-bs-toggle="modal"  data-bs-target="#modal-6"></div>
         <div class="square" id="s98"></div>
         <div class="square" id="s99"></div>
         <div class="square" id="s100"></div>
@@ -128,7 +128,7 @@
         <div class="square" id="s108"></div>
         <div class="square" id="s109"></div>
         <div class="square" id="s110"></div>
-        <div class="square" id="s111"></div>
+        <div class="square" id="s111" data-bs-toggle="modal"  data-bs-target="#modal-7"></div>
         <div class="square" id="s112"></div>
         <div class="square" id="s113"></div>
         <div class="square" id="s114"></div>
@@ -174,14 +174,116 @@
 
     <!--Galeria-->
     <!-- Modal -->
-    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true" id="modal-1">
         <button style="background-color: white;" type="button" class="btn-close" data-bs-dismiss="modal"
             aria-label="Close"></button>
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content">
                 <div class="modal-body">
                     <img src="/Images/1_selfie.jpeg" alt=""></img>
+                    <div class="description">
+                        <p>„Selfie”</p>
+                        <p>70x100 cm</p>
+                        <p>oil, cardboard</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true" id="modal-2">
+        <button style="background-color: white;" type="button" class="btn-close" data-bs-dismiss="modal"
+            aria-label="Close"></button>
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <img src="/Images/2_sample vol. 2.jpeg" alt=""></img>
+                    <div class="description">
+                        <p>„Selfie”</p>
+                        <p>70x100 cm</p>
+                        <p>oil, cardboard</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true" id="modal-3">
+        <button style="background-color: white;" type="button" class="btn-close" data-bs-dismiss="modal"
+            aria-label="Close"></button>
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <img src="/Images/3_martwa natura z cytrynami.jpeg" alt=""></img>
+                    <div class="description">
+                        <p>„Selfie”</p>
+                        <p>70x100 cm</p>
+                        <p>oil, cardboard</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true" id="modal-4">
+        <button style="background-color: white;" type="button" class="btn-close" data-bs-dismiss="modal"
+            aria-label="Close"></button>
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <img src="/Images/4_miasto.jpeg" alt=""></img>
+                    <div class="description">
+                        <p>„Selfie”</p>
+                        <p>70x100 cm</p>
+                        <p>oil, cardboard</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true" id="modal-5">
+        <button style="background-color: white;" type="button" class="btn-close" data-bs-dismiss="modal"
+            aria-label="Close"></button>
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <img src="/Images/5_przejazd.jpeg" alt=""></img>
+                    <div class="description">
+                        <p>„Selfie”</p>
+                        <p>70x100 cm</p>
+                        <p>oil, cardboard</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true" id="modal-6">
+        <button style="background-color: white;" type="button" class="btn-close" data-bs-dismiss="modal"
+            aria-label="Close"></button>
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <img src="/Images/6_Grid.jpeg" alt=""></img>
+                    <div class="description">
+                        <p>„Selfie”</p>
+                        <p>70x100 cm</p>
+                        <p>oil, cardboard</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true" id="modal-7">
+        <button style="background-color: white;" type="button" class="btn-close" data-bs-dismiss="modal"
+            aria-label="Close"></button>
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <img src="/Images/7_pejzaż.jpeg" alt=""></img>
                     <div class="description">
                         <p>„Selfie”</p>
                         <p>70x100 cm</p>
