--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hanna Gallery</title>  
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <title>Hanna Gallery</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -46,14 +44,14 @@
         <div class="square" id="s26"></div>
         <div class="square" id="s27"></div>
         <div class="square" id="s28"></div>
-        <div class="square" id="s29" data-bs-toggle="modal"  data-bs-target="#modal-1"></div>
+        <div class="square" id="s29" data-bs-toggle="modal" data-bs-target="#modal-1"></div>
         <div class="square" id="s30"></div>
         <div class="square" id="s31"></div>
         <div class="square" id="s32"></div>
-        <div class="square" id="s33" data-bs-toggle="modal"  data-bs-target="#modal-2"></div>
+        <div class="square" id="s33" data-bs-toggle="modal" data-bs-target="#modal-2"></div>
         <div class="square" id="s34"></div>
         <div class="square" id="s35"></div>
-        <div class="square" id="s36" data-bs-toggle="modal"  data-bs-target="#modal-3"></div>
+        <div class="square" id="s36" data-bs-toggle="modal" data-bs-target="#modal-3"></div>
         <div class="square" id="s37"></div>
         <div class="square" id="s38"></div>
         <div class="square" id="s39"></div>
@@ -64,7 +62,7 @@
         <div class="square" id="s44"></div>
         <div class="square" id="s45"></div>
         <div class="square" id="s46"></div>
-        <div class="square" id="s47" data-bs-toggle="modal"  data-bs-target="#modal-4"></div>
+        <div class="square" id="s47" data-bs-toggle="modal" data-bs-target="#modal-4"></div>
         <div class="square" id="s48"></div>
         <div class="square" id="s49"></div>
         <div class="square" id="s50"></div>
@@ -92,7 +90,7 @@
         <div class="square" id="s72"></div>
         <div class="square" id="s73"></div>
         <div class="square" id="s74"></div>
-        <div class="square" id="s75" data-bs-toggle="modal"  data-bs-target="#modal-5"></div>
+        <div class="square" id="s75" data-bs-toggle="modal" data-bs-target="#modal-5"></div>
         <div class="square" id="s76"></div>
         <div class="square" id="s77"></div>
         <div class="square" id="s78"></div>
@@ -114,7 +112,7 @@
         <div class="square" id="s94"></div>
         <div class="square" id="s95"></div>
         <div class="square" id="s96"></div>
-        <div class="square" id="s97" data-bs-toggle="modal"  data-bs-target="#modal-6"></div>
+        <div class="square" id="s97" data-bs-toggle="modal" data-bs-target="#modal-6"></div>
         <div class="square" id="s98"></div>
         <div class="square" id="s99"></div>
         <div class="square" id="s100"></div>
@@ -128,7 +126,7 @@
         <div class="square" id="s108"></div>
         <div class="square" id="s109"></div>
         <div class="square" id="s110"></div>
-        <div class="square" id="s111" data-bs-toggle="modal"  data-bs-target="#modal-7"></div>
+        <div class="square" id="s111" data-bs-toggle="modal" data-bs-target="#modal-7"></div>
         <div class="square" id="s112"></div>
         <div class="square" id="s113"></div>
         <div class="square" id="s114"></div>
@@ -171,13 +169,47 @@
     </div>
 
 
-
     <!--Galeria-->
     <!-- Modal -->
     <div class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true" id="modal-1">
-        <button style="background-color: white;" type="button" class="btn-close" data-bs-dismiss="modal"
-            aria-label="Close"></button>
+
+        <div class="modal-header">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                <svg version="1.1" id="Warstwa_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 104 104"
+                    style="enable-background:new 0 0 104 104;" xml:space="preserve">
+                    <style type="text/css">
+                        .st0 {
+                            fill: white;
+                        }
+                    </style>
+                    <rect width="104" height="104" />
+                    <image style="overflow:visible;" width="129" height="139"
+                        xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAIEAAACLCAIAAADJWW1hAAAAA3NCSVQICAjb4U/gAAAAX3pUWHRS
+                                                                                        YXcgcHJvZmlsZSB0eXBlIEFQUDEAAAiZ40pPzUstykxWKCjKT8vMSeVSAANjEy4TSxNLo0QDAwML
+                                                                                        AwgwNDAwNgSSRkC2OVQo0QAFmJibpQGhuVmymSmIzwUAT7oVaBst2IwAAAFwSURBVHic7dyxDYNA
+                                                                                        EABBYyESt2H6LwiKISbBkdkXmkkJDml14f30mZcXqXf9A2gwAA16GvQ06GnQ06CnQU+DngY9DXrz
+                                                                                        xbfvuv5v8L5t1az7x12zBz0Nehr0NOhp0NOgp0FPg54GPQ16GvQ06GnQ06CnQU+DngY9DXoa9DTo
+                                                                                        adDToKdBT4OeBj0Nehr0NOhp0NOgp0FPg97kzZCcPehp0NOgp0FvlLvMm8e5y+REg54GPQ16GvQ0
+                                                                                        6GnQ06CnQU+DngY9DXoa9DToadDToKdBT4OeBj0Nehr0NOhp0NOgp0FPg54GPQ16GvQ06GnQ06Dn
+                                                                                        LrNnD3oa9DToadAb5S7zwTegP9mDngY9DXoa9DToadDToKdBT4OeBj0Nehr0NOhp0NOgp0FPg54G
+                                                                                        PQ16GvQ06GnQ06CnQU+DngY9DXoa9DToadDToKdBz11mzx70NOhp0NOgp0FPg54GPQ16GvQ06GnQ
+                                                                                        06CnQU+DngY9DXoa9A52RxxtjMLp2QAAAABJRU5ErkJggg=="
+                        transform="matrix(1 0 0 1 -224.1164 69.089)">
+                    </image>
+                    <rect x="36" y="72" class="st0" width="32" height="32" />
+                    <rect y="72" class="st0" width="32" height="32" />
+                    <rect x="72" y="72" class="st0" width="32" height="32" />
+                    <rect x="36" y="36" class="st0" width="32" height="32" />
+                    <rect y="36" class="st0" width="32" height="32" />
+                    <rect x="72" y="36" class="st0" width="32" height="32" />
+                    <rect x="36" class="st0" width="32" height="32" />
+                    <rect class="st0" width="32" height="32" />
+                    <rect x="72" class="st0" width="32" height="32" />
+                </svg>
+            </button>
+        </div>
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content">
                 <div class="modal-body">
@@ -191,7 +223,7 @@
             </div>
         </div>
     </div>
-    <div class="modal fade"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    <div class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true" id="modal-2">
         <button style="background-color: white;" type="button" class="btn-close" data-bs-dismiss="modal"
             aria-label="Close"></button>
@@ -208,7 +240,7 @@
             </div>
         </div>
     </div>
-    <div class="modal fade"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    <div class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true" id="modal-3">
         <button style="background-color: white;" type="button" class="btn-close" data-bs-dismiss="modal"
             aria-label="Close"></button>
@@ -225,7 +257,7 @@
             </div>
         </div>
     </div>
-    <div class="modal fade"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    <div class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true" id="modal-4">
         <button style="background-color: white;" type="button" class="btn-close" data-bs-dismiss="modal"
             aria-label="Close"></button>
@@ -242,7 +274,7 @@
             </div>
         </div>
     </div>
-    <div class="modal fade"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    <div class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true" id="modal-5">
         <button style="background-color: white;" type="button" class="btn-close" data-bs-dismiss="modal"
             aria-label="Close"></button>
@@ -259,7 +291,7 @@
             </div>
         </div>
     </div>
-    <div class="modal fade"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    <div class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true" id="modal-6">
         <button style="background-color: white;" type="button" class="btn-close" data-bs-dismiss="modal"
             aria-label="Close"></button>
@@ -276,7 +308,7 @@
             </div>
         </div>
     </div>
-    <div class="modal fade"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    <div class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true" id="modal-7">
         <button style="background-color: white;" type="button" class="btn-close" data-bs-dismiss="modal"
             aria-label="Close"></button>
@@ -310,7 +342,10 @@
 
 
 
-  <!-- Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
