--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content">
                 <div class="modal-body">
-                    <img src="/Images/1_selfie.jpeg" alt=""></img>
+                    <img src="Images/1_selfie.jpeg" alt=""></img>
                     <div class="description">
                         <p>„Selfie”</p>
                         <p>70x100 cm</p>
