--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content">
                 <div class="modal-body">
-                    <img src="Images/1_selfie.jpeg" alt=""></img>
+                    <img src="Images/2_sample vol. 2.jpeg" alt=""></img>
                     <div class="description">
-                        <p>„Selfie”</p>
-                        <p>70x100 cm</p>
-                        <p>oil, cardboard</p>
+                        <p>„Sample vol. 2”</p>
+                        <p>100x70 cm</p>
+                        <p>oil,  cardboard</p>
                     </div>
                 </div>
             </div>
