Images fixed for pages

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content">
                 <div class="modal-body">
-                    <img src="/Images/3_martwa natura z cytrynami.jpeg" alt=""></img>
+                    <img src="Images//3_martwa natura z cytrynami.jpeg" alt=""></img>
                     <div class="description">
                         <p>„Martwa natura
                             z cytrynami”</p>
@@ -324,7 +324,7 @@
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content">
                 <div class="modal-body">
-                    <img src="/Images/6_Grid.jpeg" alt=""></img>
+                    <img src="Images//6_Grid.jpeg" alt=""></img>
                     <div class="description">
                         <p>„Grid”</p>
                         <p>50x70 cm</p>
@@ -378,7 +378,7 @@
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content">
                 <div class="modal-body">
-                    <img src="/Images/5_przejazd.jpeg" alt=""></img>
+                    <img src="Images//5_przejazd.jpeg" alt=""></img>
                     <div class="description">
                         <p>„Przejazd”</p>
                         <p>27x44 cm</p>
@@ -432,7 +432,7 @@
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content">
                 <div class="modal-body">
-                    <img src="/Images/1_selfie.jpeg" alt=""></img>
+                    <img src="Images//1_selfie.jpeg" alt=""></img>
                     <div class="description">
                         <p>„Selfie”</p>
                         <p>70x100 cm</p>
@@ -486,7 +486,7 @@
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content">
                 <div class="modal-body">
-                    <img src="/Images/7_pejzaż.jpeg" alt=""></img>
+                    <img src="Images//7_pejzaż.jpeg" alt=""></img>
                     <div class="description">
                         <p>„Pejzaż”</p>
                         <p>50x70 cm</p>
@@ -540,7 +540,7 @@
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content">
                 <div class="modal-body">
-                    <img src="/Images/4_miasto.jpeg" alt=""></img>
+                    <img src="Images//4_miasto.jpeg" alt=""></img>
                     <div class="description">
                         <p>„Miasto”</p>
                         <p>50x70 cm</p>
