--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content">
                 <div class="modal-body">
-                    <img src="Images/2_sample vol. 2.jpeg" alt=""></img>
+                    <img src="Images/2_sample vol. 2.jpeg" class="img-responsive" alt=""></img>
                     <div class="description">
                         <p>„Sample vol. 2”</p>
                         <p>100x70 cm</p>
@@ -268,7 +268,7 @@
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content">
                 <div class="modal-body">
-                    <img src="Images//3_martwa natura z cytrynami.jpeg" alt=""></img>
+                    <img src="Images//3_martwa natura z cytrynami.jpeg" class="img-responsive" alt=""></img>
                     <div class="description">
                         <p>„Martwa natura
                             z cytrynami”</p>
