--- a/index.html
+++ b/index.html
@@ -580,8 +580,8 @@
 
 <!--Anime.js-->
 
-    <script src="/js/anime-master/lib/anime.min.js"></script>
-    <script src="/script.js"></script>
+    <script src="js/anime-master/lib/anime.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
