Mini gallery upload

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="square" id="s113"></div>
         <div class="square" id="s114"></div>
         <div class="square" id="s115"></div>
-        <div class="square" id="s116"></div>
+        <div class="square" id="s116" data-bs-toggle="modal" data-bs-target="#modal-7"></div>
         <div class="square" id="s117"></div>
         <div class="square" id="s118"></div>
         <div class="square" id="s119"></div>
@@ -538,16 +538,23 @@
             </button>
         </div>
         <div class="modal-dialog modal-fullscreen">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <img src="Images//4_miasto.jpeg" alt=""></img>
-                    <div class="description">
-                        <p>„Miasto”</p>
-                        <p>50x70 cm</p>
-                        <p>oil, acryl, cardboard</p>
-                    </div>
+                  
+            <div class="row">
+                <div class="column">
+                  <img src="Images/4 Images Group/8_Sample vol. 3 A.jpeg" >
                 </div>
-            </div>
+                <div class="column">
+                  <img src="Images/4 Images Group/8_Sample vol. 3 B.jpeg" ">
+                </div>
+                <div class="column">
+                  <img src="Images/4 Images Group/8_Sample vol. 3 C.jpeg" >
+                </div>
+                <div class="column">
+                    <img src="Images/4 Images Group/8_Sample vol. 3 D.jpeg" >
+                  </div>
+              </div>
+
+
         </div>
     </div>
 
